--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css'
 
@@ -33,7 +33,7 @@ const textCase = "uppercase";
   </head>
   <body>
     <body>
-      <Navigation />
+      <Header />
       <h1>{pageTitle}</h1>
       <style define:vars={{skillColor, fontWeight, textCase}}>
         h1 {
