--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css'
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
 
 const pageTitle = "About Me";
 
@@ -35,7 +35,7 @@ const textCase = "uppercase";
     <body>
       <Header />
       <h1>{pageTitle}</h1>
-      <style define:vars={{skillColor, fontWeight, textCase}}>
+      <style define:vars={{ skillColor, fontWeight, textCase }}>
         h1 {
           color: purple;
           font-size: 4rem;
@@ -90,6 +90,10 @@ const textCase = "uppercase";
       }
 
       <Footer />
+
+      <script>
+        import "../scripts/menu.js";
+      </script>
     </body>
   </body>
 </html>
