--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,9 @@
 ---
 import { SITE_TITLE } from "../config/consts";
 import "../styles/global.css";
-import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
+import Hero from "../components/Hero.astro";
+import ScrollToTop from "../components/ScrollToTop.astro";
 ---
 
 <html lang="en">
@@ -16,10 +17,17 @@ import Footer from "../components/Footer.astro";
   <body
     class="flex flex-col min-h-screen mx-auto w-3xl bg-[#222831] text-[#DFD0B8]"
   >
-    <Navigation />
+    <Hero />
     <main class="flex-grow">
-      <script></script>
+      <slot />
     </main>
     <Footer />
+    <ScrollToTop />
   </body>
 </html>
+
+<style is:global>
+  html {
+    scroll-behavior: smooth;
+  }
+</style>
